<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.droidcafe.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="10"
        android:title="@string/contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:icon="@drawable/ic_shopping_cart1"
        android:orderInCategory="10"
        android:title="@string/order"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_status"
        android:enabled="true"
        android:icon="@drawable/ic_status_info1"
        android:orderInCategory="20"
        android:title="@string/status"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="30"
        android:title="@string/favorites"
        app:showAsAction="never" />
</menu>